--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
     </nav>
     <div class="container text-center main">
-      <h1 class="font-robotoslab-bold" style="font-size: 72px;">Looking for an IT developer?</h1>
+      <h1 class="font-robotoslab-bold">Looking for an IT developer?</h1>
       <p class="lead font-robotoslab-bold" style="margin-top:25px; font-size: 20px;">
           Tournesol provides you with very qualitative & affordable nearshore developers in Ukraine
       </p>
@@ -88,7 +88,6 @@
         <h4>Developer's technologies</h4>
       </div>
       <div class="row row-margin">
-        
         <div class="col-md-2 tech-img">
             <img src="img/frontend.png">
         </div>
@@ -102,49 +101,56 @@
         <div class="col-md-4 text-center"><a class="btn btn-hire-white"><strong>Hire a developer</strong></a></div>
       </div>
       <div class="row row-margin">
-        <div class="col-md-2">
-          <img src="img/backend.png" class="pull-right">
+        <div class="col-md-2 tech-img">
+            <img src="img/backend.png">
         </div>
-        <div class="col-md-4">
-          <strong>BACK END</strong>
-          <p><br>PHP (Symfony2/3; Laravel; Yii; Zend;<br>Wordpress, other frameworks), Java -<br>C/C++, Ruby, Scala,
-            MySQL</p>
+        <div class="col-md-4">          
+          <div class="tech-title">
+            <strong>BACK END</strong>
+            <p>PHP (Symfony2/3; Laravel; Yii; Zend;<br>Wordpress, other frameworks), Java -<br>C/C++, Ruby, Scala, MySQL</p>
+          </div>
         </div>
-        <div class="col-md-2" style="padding:40px 0px;"><strong>from 220&#x20AC;/day</strong></div>
-        <div class="col-md-4"><a class="btn btn-tech"><strong>Hire a developer</strong></a></div>
+        <div class="col-md-2 text-center hr-rate"><strong>from 220&#x20AC;/day</strong></div>
+        <div class="col-md-4 text-center"><a class="btn btn-hire-white"><strong>Hire a developer</strong></a></div>
       </div>
       <div class="row row-margin">
-        <div class="col-md-2">
-          <img src="img/mobile.png" class="pull-right">
+        <div class="col-md-2 tech-img">
+            <img src="img/mobile.png">
         </div>
-        <div class="col-md-4">
-          <strong>MOBILE</strong>
-          <p><br>Android, iOS, Objective Swift,<br>J2ME, C#</p>
+        <div class="col-md-4">          
+          <div class="tech-title">
+            <strong>MOBILE</strong>
+            <p>Android, iOS, Objective Swift,<br>J2ME, C#</p>
+          </div>
         </div>
-        <div class="col-md-2" style="padding:40px 0px;"><strong>from 250&#x20AC;/day</strong></div>
-        <div class="col-md-4"><a class="btn btn-tech"><strong>Hire a developer</strong></a></div>
+        <div class="col-md-2 text-center hr-rate"><strong>from 250&#x20AC;/day</strong></div>
+        <div class="col-md-4 text-center"><a class="btn btn-hire-white"><strong>Hire a developer</strong></a></div>
       </div>
       <div class="row row-margin">
-        <div class="col-md-2">
-          <img src="img/server.png" class="pull-right">
+        <div class="col-md-2 tech-img">
+            <img src="img/server.png">
         </div>
-        <div class="col-md-4">
-          <strong>SERVER</strong>
-          <p><br>Ubuntu, Debian, Linux, Windows,<br>Devops, Fedora</p>
+        <div class="col-md-4">          
+          <div class="tech-title">
+            <strong>SERVER</strong>
+            <p>Ubuntu, Debian, Linux, Windows,<br>Devops, Fedora</p>
+          </div>
         </div>
-        <div class="col-md-2" style="padding:40px 0px;"><strong>from 200&#x20AC;/day</strong></div>
-        <div class="col-md-4"><a class="btn btn-tech"><strong>Hire a developer</strong></a></div>
+        <div class="col-md-2 text-center hr-rate"><strong>from 200&#x20AC;/day</strong></div>
+        <div class="col-md-4 text-center"><a class="btn btn-hire-white"><strong>Hire a developer</strong></a></div>
       </div>
       <div class="row row-margin">
-        <div class="col-md-2">
-          <img src="img/other.png" class="pull-right">
+        <div class="col-md-2 tech-img">
+            <img src="img/other.png">
         </div>
-        <div class="col-md-4">
-          <strong>OTHERS...</strong>
-          <p><br></p>
+        <div class="col-md-4">          
+          <div class="tech-title">
+            <strong>OTHERS...</strong>
+            <p></p>
+          </div>
         </div>
-        <div class="col-md-2" style="padding:40px 0px;"><strong>from 170&#x20AC;/day</strong></div>
-        <div class="col-md-4"><a class="btn btn-tech"><strong>Hire a developer</strong></a></div>
+        <div class="col-md-2 text-center hr-rate"><strong>from 170&#x20AC;/day</strong></div>
+        <div class="col-md-4 text-center"><a class="btn btn-hire-white"><strong>Hire a developer</strong></a></div>
       </div>
     </section>
     <section style="margin-top: 50px;">
