--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </p>
       <div class="row email-box">
         <div class="offset-md-2 col-md-4">
-          <input type="email" class="form-control" style="border-radius: 8px; padding: 15px 10px; margin-top: 15px; text-align: center" placeholder="Enter your mail">
+          <input type="email" class="form-control text-center" style="border-radius: 8px; padding: 18px 10px; margin-top: 15px; font-size: 20px;" placeholder="Enter your mail">
         </div>
         <div class="col-md-3" style="margin: 15px 0px;">
           <a class="btn btn-hire form-control font-roboto-bold">Hire a developer</a>
@@ -158,148 +158,156 @@
         <h4>How it works</h4>
       </div>
       <div class="row row-margin">
-        <div class="col-md-10 offset-md-1 row">
-          <div class="col-md-3 align-work text-center">
-            <div>
-              <img src="img/recurit.png">
-            </div>
-            <div class="row-margin">
-              <h1 class="font-roboto-bold" style="font-size: 18px;">Recurit the best</h1><br>
-              <p class="Roboto-regular" style="font-size: 18px; text-align: center;">
-                To hire every single
-                developers we interview
-                on average 12-15
-                candidates and make
-                them take some tests
-              </p>
-            </div>
+        <div class="offset-md-1 col-md-2 text-center">
+          <div>
+            <img src="img/recurit.png">
           </div>
-          <div class="col-md-3 align-work">
-            <div>
-              <img src="img/follow.png">
-            </div>
-            <div class="row-margin">
-              <h1 class="font-roboto-bold" style="font-size: 18px;">Follow their work</h1>
-              <p class="Roboto-regular" style="font-size: 18px; text-align:center; margin-top: 35px;">
-                You are the boss.
-                You give the work
-                and give the path
-                of the project
-              </p>
-            </div>
+          <div class="row-margin">
+            <h1 class="font-roboto-bold work-header">Recurit the best</h1>
+            <p class="font-font-roboto-regular work-description" style="margin: 0 -12%;">
+              To hire every single
+              developers we interview
+              on average 12-15<br>
+              candidates and make
+              them take some tests
+            </p>
           </div>
-          <div class="col-md-3 align-work">
-            <div>
-              <img src="img/track.png">
-            </div>
-            <div class="row-margin">
-              <h1 class="font-roboto-bold" style="font-size: 18px;">Track their advancements</h1>
-              <p class="Roboto-regular" style="font-size: 18px; width: 200px; text-align:center; margin-top: 15px;">
-                You use Timedoctor and
-                time tracking tools to
-                check your developers
-                are 100% concentrated
-                on their work
-              </p>
-            </div>
+        </div>
+        <div class="col-md-3 text-center">
+          <div>
+            <img src="img/follow.png">
           </div>
-          <div class="col-md-3 align-work">
-            <div>
-              <img src="img/control.png">
-            </div>
-            <div class="row-margin">
-              <h1 class="font-roboto-bold" style="font-size: 18px;">Control the quality</h1>
-              <p class="Roboto-regular" style="font-size: 18px; width: 200px; text-align:center; margin-top: 35px;">
-                Tools like SONAR
-                are used to control
-                the quality of
-                he code
-              </p>
-            </div>
+          <div class="row-margin">
+            <h1 class="font-roboto-bold work-header">Follow their work</h1>
+            <p class="font-font-roboto-regular work-description" style="margin: 0 16%;">
+              You are the boss.
+              You give the work
+              and give the path
+              of the project
+            </p>
           </div>
-        </div>        
+        </div>
+        <div class="col-md-3 text-center">
+          <div>
+            <img src="img/track.png">
+          </div>
+          <div class="row-margin">
+            <h1 class="font-roboto-bold work-header">Track their advancements</h1>
+            <p class="font-font-roboto-regular work-description"  style="margin: 0 10%;">
+              You use Timedoctor and
+              time tracking tools to
+              check your developers
+              are 100% concentrated
+              on their work
+            </p>
+          </div>
+        </div>
+        <div class="col-md-2 text-center">
+          <div>
+            <img src="img/control.png">
+          </div>
+          <div class="row-margin">
+            <h1 class="font-roboto-bold work-header">Control the quality</h1>
+            <p class="font-font-roboto-regular work-description" >
+              Tools like SONAR
+              are used to control
+              the quality of
+              he code
+            </p>
+          </div>
+        </div>      
       </div>
     </section>
   </div>
-  <div style="background-color:#388CC6; padding:50px 0px;" class="text-white">
+  <div class="middle-bar text-white" style="background-color:#388CC6; padding:50px 0px;">
     <div class="container">
       <div class="row">
-        <div class="offset-md-1 col-md-6">
+        <div class="offset-md-1 col-md-7">
           <h1 class="font-roboto-bold" style="font-size: 28px;">Empower your IT team with talents</h1>
-          <p class="Roboto-regular" style="font-size: 17px; margin-bottom:0px;">We recruit for you the best key players
+          <p class="font-roboto-regular" style="font-size: 17px; margin-bottom:0px;">We recruit for you the best key players
             you can easily manage</p>
         </div>
-        <div class="col-md-4 ">
-          <a class="btn btn-hire pull-right"><strong>Hire a developer</strong></a>
+        <div class="col-md-4 text-center">
+          <a class="btn btn-hire font-roboto-bold" style="padding: 16px 40px;"><strong>Hire a developer</strong></a>
         </div>
       </div>
     </div>
   </div>
   <div class="container">
-    <section style="margin-top:50px;">
+    <section style="margin:50px 0px;">
       <div class="text-center">
-        <h4 class="Roboto-medium" style="font: size 30px;">IT recruitment</h4>
+        <h4 class="font-roboto-medium" style="font-size: 30px; margin-bottom: 20px;">IT recruitment</h4>
       </div>
-      <div class="row">
+      <div class="row recruit-row">
         <div class="offset-md-1 col-md-4">
-          <img src="img/01_1.png">
+          <img src="img/01.png" class="pull-right">
         </div>
         <div class="col-md-5">
-          <h1 class="font-roboto-bold number-format"><strong>01.</strong></h1>
-          <p class="Roboto-regular num-sen"><br>5 external recruitment firms screen THE BEST
-            among a market of 56,000 Ukrainian developers</p>
+          <div class="recruit">
+            <h1 class="font-roboto-bold number-format">01.</h1>
+            <p class="font-roboto-regular num-sen">5 external recruitment firms screen THE BEST<br>
+              among a market of 56,000 Ukrainian developers</p>
+            </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row recruit-row">
         <div class="offset-md-3 col-md-4">
-          <h1 class="font-roboto-bold number-format"><strong>02.</strong></h1>
-          <p class="Roboto-regular num-sen"><br>
-            After having selected and tested, they
-            send them to our recruitment manager
-            who checks their course, receives them
-            for a motivation interview, personality
-          </p>
+          <div class="recruit pull-right">
+            <h1 class="font-roboto-bold number-format">02.</h1>
+            <p class="font-roboto-regular num-sen">
+              After having selected and tested, they
+              send them to our recruitment manager
+              who checks their course, receives them
+              for a motivation interview, personality
+            </p>
+          </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-4">
           <img src="img/02.png">
         </div>
       </div>
-      <div class="row">
+      <div class="row recruit-row">
         <div class="offset-md-1 col-md-4">
-          <img src="img/3.png">
+          <img src="img/3.png" class="pull-right">
         </div>
         <div class="col-md-5">
-          <h1 class="font-roboto-bold number-format"><strong>03.</strong></h1>
-          <p class="Roboto-regular num-sen"><br>
-            When the developer is selected (ratio: 1/10 of the
-            developers sent are validated by our manager, he
-            then returns to our premises to pass technical
-            tests of international standards)
-          </p>
+          <div class="recruit">
+            <h1 class="font-roboto-bold number-format"><strong>03.</strong></h1>
+            <p class="font-roboto-regular num-sen">
+              When the developer is selected (ratio: 1/10 of the
+              developers sent are validated by our manager, he
+              then returns to our premises to pass technical
+              tests of international standards)
+            </p>
+          </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row recruit-row">
         <div class="offset-md-3 col-md-4">
-          <h1 class="font-roboto-bold number-format"><strong>04.</strong></h1>
-          <p class="Roboto-regular num-sen"><br>
-            If they pass (2/3), he then meets the director
-            of our office for administrative / legal details
-          </p>
+          <div class="recruit">
+            <h1 class="font-roboto-bold number-format">04.</h1>
+            <p class="font-roboto-regular num-sen">
+              If they pass (2/3), he then meets the director
+              of our office for administrative / legal details
+            </p>
+          </div>
         </div>
         <div class="col-md-5">
           <img src="img/4.png">
         </div>
       </div>
-      <div class="row">
+      <div class="row recruit-row">
         <div class="offset-md-1 col-md-4">
-          <img src="img/5.png">
+          <img src="img/5.png" class="pull-right">
         </div>
         <div class="col-md-5">
-          <h1 class="font-roboto-bold number-format"><strong>05.</strong></h1>
-          <p class="Roboto-regular num-sen"><br>
-            When selected he then passes an onboarding
-            accompanied by a senior lead developer or CTO
-          </p>
+          <div class="recruit">
+            <h1 class="font-roboto-bold number-format">05.</h1>
+            <p class="font-roboto-regular num-sen">
+              When selected he then passes an onboarding
+              accompanied by a senior lead developer or CTO
+            </p>
+          </div>
         </div>
       </div>
     </section>
@@ -331,7 +339,7 @@
     <section style="margin-top: 50px;">
       <div class="text-center">
         <h4 class="Roboto-medium" style="font-size: 30px;">Our magic sauce</h4>
-        <p class="Roboto-regular" style="font-size: 18px; color: #388CC6"><br>
+        <p class="font-roboto-regular" style="font-size: 18px; color: #388CC6"><br>
           Tournesol : your IT company in Ukraine<br>
           French quality, optimal security at Ukrainian prices
         </p>
@@ -339,7 +347,7 @@
       <div class="row row-margin">
         <div class="offset-md-1 col-md-3 text-center">
           <img src="img/sau1.png">
-          <p class="Roboto-regular" style="font-size: 18px;"><br>
+          <p class="font-roboto-regular" style="font-size: 18px;"><br>
             A commercial contract under French
             law with a French company (contract
             of provision / technical assistance)
@@ -347,7 +355,7 @@
         </div>
         <div class="offset-md-1 col-md-2 text-center">
           <img src="img/sau2.png">
-          <p class="Roboto-regular" style="font-size: 18px;"><br>
+          <p class="font-roboto-regular" style="font-size: 18px;"><br>
             Recruitment techniques
             ensuring the quality
             of developers
@@ -355,7 +363,7 @@
         </div>
         <div class="offset-md-1 col-md-3 text-center">
           <img src="img/sau3.png">
-          <p class="Roboto-regular" style="font-size: 18px;"><br>
+          <p class="font-roboto-regular" style="font-size: 18px;"><br>
             A follow-up from A to Z of your
             project and developers
             by our teams
@@ -365,21 +373,21 @@
       <div class="row row-margin">
         <div class="offset-md-1 col-md-3 text-center">
           <img src="img/sau4.png">
-          <p class="Roboto-regular" style="font-size: 18px;"><br>
+          <p class="font-roboto-regular" style="font-size: 18px;"><br>
             NDA Signatures & Intellectual
             Property Transmissions
           </p>
         </div>
         <div class="offset-md-1 col-md-2 text-center">
           <img src="img/sau5.png">
-          <p class="Roboto-regular" style="font-size: 18px;"><br>
+          <p class="font-roboto-regular" style="font-size: 18px;"><br>
             Developers supervised
             in our offices
           </p>
         </div>
         <div class="offset-md-1 col-md-3 text-center">
           <img src="img/sau6.png">
-          <p class="Roboto-regular" style="font-size: 18px;"><br>
+          <p class="font-roboto-regular" style="font-size: 18px;"><br>
             Ukrainian
             prices
           </p>
@@ -406,7 +414,7 @@
   <div class="container">
     <div class="text-center row-margin">
       <h4 class="Roboto-bold" style="font-size: 20px;"><strong>Do you need developer?</strong></h4>
-      <p class="Roboto-regular" style="font-size: 15px; color: #388CC6">
+      <p class="font-roboto-regular" style="font-size: 15px; color: #388CC6">
         High quality standards? Affordable price? Industry best practices?
       </p>
     </div>
@@ -433,7 +441,7 @@
             </p>
           </div>
           <div class="col-md-4" style="margin-top: 15px;">
-            <p class="Roboto-regular" style="font-size: 15px; opacity: 0.7">
+            <p class="font-roboto-regular" style="font-size: 15px; opacity: 0.7">
               ТОВАРИСТВО З ОБМЕЖЕНОЮ<br>
               ВІДПОВІДАЛЬНІСТЮ "ТУРНЕСОЛЬ"<br>
               ЄДРПОУ 40710504,<br>
@@ -443,9 +451,9 @@
             </p>
           </div>
           <div class="col-md-3" style="margin-top: 15px;">
-            <div><img src="img/mail.png"><span class="Roboto-regular" style="font-size: 18px; opacity: 0.7;">&nbsp;&nbsp;&nbsp;@tournesoul.com.ua</span></div>
-            <div style="margin-top: 15px;"><img src="img/phone.png"><span class="Roboto-regular" style="font-size: 18px; opacity: 0.7;">&nbsp;&nbsp;&nbsp;(+38)068-863-12-87</span></div>
-            <div style="margin-top: 15px;"><img src="img/phone.png"><span class="Roboto-regular" style="font-size: 18px; opacity: 0.7;">&nbsp;&nbsp;&nbsp;(+38)067-396-84-56</span></div>
+            <div><img src="img/mail.png"><span class="font-roboto-regular" style="font-size: 18px; opacity: 0.7;">&nbsp;&nbsp;&nbsp;@tournesoul.com.ua</span></div>
+            <div style="margin-top: 15px;"><img src="img/phone.png"><span class="font-roboto-regular" style="font-size: 18px; opacity: 0.7;">&nbsp;&nbsp;&nbsp;(+38)068-863-12-87</span></div>
+            <div style="margin-top: 15px;"><img src="img/phone.png"><span class="font-roboto-regular" style="font-size: 18px; opacity: 0.7;">&nbsp;&nbsp;&nbsp;(+38)067-396-84-56</span></div>
           </div>
         </div>
       </div>
