--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
   <div class="container">
     <section style="margin:50px 0px;">
       <div class="text-center">
-        <h4 class="font-roboto-medium" style="font-size: 30px; margin-bottom: 20px;">IT recruitment</h4>
+        <h4 class="font-font-roboto-medium" style="font-size: 30px; margin-bottom: 20px;">IT recruitment</h4>
       </div>
       <div class="row recruit-row">
         <div class="offset-md-1 col-md-4">
@@ -312,33 +312,33 @@
       </div>
     </section>
   </div>
-  <div style="background-color:#388CC6; padding:50px 0px;" class="text-white">
+  <div class="middle-bar text-white" style="padding: 65px 0px 40px 0px;">
     <div class="container">
       <div class="row">
         <div class="offset-md-1 col-md-3 text-center">
           <div class="circle-back">
 
           </div>
-          <h4 class="font-roboto-bold rating">8 years</h4>
-          <p class="Roboto-medium" style="font-size: 15px;">Our experience</p>
+          <h4 class="font-roboto-bold rating" style="margin-left: 75px;">8 years</h4>
+          <p class="font-roboto-medium" style="font-size: 20px;">Our experience</p>
         </div>
         <div class="col-md-4 text-center">
           <div class="circle-back"></div>
-          <h4 class="font-roboto-bold rating">100 +</h4>
-          <p class="Roboto-medium" style="font-size: 15px;">Developers a hired</p>
+          <h4 class="font-roboto-bold rating" style="margin-left: 50px;">100 +</h4>
+          <p class="font-roboto-medium" style="font-size: 20px;">Developers a hired</p>
         </div>
         <div class="col-md-3 text-center">
           <div class="circle-back"></div>
-          <h4 class="font-roboto-bold rating">30 +</h4>
-          <p class="Roboto-medium" style="font-size: 15px;">B2B clients satisfied</p>
+          <h4 class="font-roboto-bold rating" style="margin-left: 30px;">30 +</h4>
+          <p class="font-roboto-medium" style="font-size: 20px;">B2B clients satisfied</p>
         </div>
       </div>
     </div>
   </div>
   <div class="container">
-    <section style="margin-top: 50px;">
+    <section style="margin: 80px 0px 50px 0px;">
       <div class="text-center">
-        <h4 class="Roboto-medium" style="font-size: 30px;">Our magic sauce</h4>
+        <h4 class="font-roboto-medium" style="font-size: 30px;">Our magic sauce</h4>
         <p class="font-roboto-regular" style="font-size: 18px; color: #388CC6"><br>
           Tournesol : your IT company in Ukraine<br>
           French quality, optimal security at Ukrainian prices
@@ -347,7 +347,7 @@
       <div class="row row-margin">
         <div class="offset-md-1 col-md-3 text-center">
           <img src="img/sau1.png">
-          <p class="font-roboto-regular" style="font-size: 18px;"><br>
+          <p class="font-roboto-regular" style="font-size: 18px; margin: 0 -10%;"><br>
             A commercial contract under French
             law with a French company (contract
             of provision / technical assistance)
@@ -355,7 +355,7 @@
         </div>
         <div class="offset-md-1 col-md-2 text-center">
           <img src="img/sau2.png">
-          <p class="font-roboto-regular" style="font-size: 18px;"><br>
+          <p class="font-roboto-regular" style="font-size: 18px; margin: 0 -12%;"><br>
             Recruitment techniques
             ensuring the quality
             of developers
@@ -380,7 +380,7 @@
         </div>
         <div class="offset-md-1 col-md-2 text-center">
           <img src="img/sau5.png">
-          <p class="font-roboto-regular" style="font-size: 18px;"><br>
+          <p class="font-roboto-regular" style="font-size: 18px; margin: 0 -10%;"><br>
             Developers supervised
             in our offices
           </p>
@@ -395,18 +395,18 @@
       </div>
     </section>
   </div>
-  <div style="background-color:#388CC6; padding:50px 0px;" class="text-white">
+  <div class="middle-bar text-white" style="padding: 70px 0px;">
     <div class="container">
       <div class="row">
-        <div class="offset-md-1 col-md-6">
+        <div class="offset-md-1 col-md-5">
           <h1 class="font-roboto-bold" style="font-size: 28px;">
             Tournesol puts you at the disposal
             of the Ukrainian developers in direct
             control of our offices in UA
           </h1>
         </div>
-        <div class="col-md-4 ">
-          <a class="btn btn-hire pull-right"><strong>Hire a developer</strong></a>
+        <div class="offset-md-2 col-md-4 text-center">
+          <a class="btn btn-hire font-roboto-bold" style="padding: 16px 40px; margin: 20px 0px;"><strong>Hire a developer</strong></a>
         </div>
       </div>
     </div>
