--- a/index.html
+++ b/index.html
@@ -412,6 +412,17 @@
     </div>
   </div>
   <div class="container">
+    <div class="row" style="margin: 50px 0px;">
+      <div class="offset-md-1 col-md-2">
+        <div>
+          <h4 class="font-roboto-medium" style="font-size: 30px;">What our clients are saying</h4>
+          <img src="img/person3.png" class="pull-right" style="margin: 80px -80px 0px 0px;">
+        </div>
+      </div>
+      <div class="offset-md-1 col-md-1"><img src="img/person2.png" style="margin-top: 150px;"></div>
+      <div class="offset-md-1 col-md-4"  style="width: 100%; box-shadow: 0 10px 40px #00000025; border-radius: 25px;">
+      </div>
+    </div>
     <div class="text-center row-margin">
       <h4 class="Roboto-bold" style="font-size: 20px;"><strong>Do you need developer?</strong></h4>
       <p class="font-roboto-regular" style="font-size: 15px; color: #388CC6">
