--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           <div class="circle-back">
 
           </div>
-          <h4 class="font-roboto-bold rating" style="margin-left: 75px;">8 years</h4>
+          <h4 class="font-roboto-bold rating" style="margin-left: 75px; min-width: 100px;">8 years</h4>
           <p class="font-roboto-medium" style="font-size: 20px;">Our experience</p>
         </div>
         <div class="col-md-4 text-center">
