--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown09" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">EN</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown09" style="border: transparent;">
+                <div class="dropdown-menu" aria-labelledby="dropdown09" style="border: transparent; margin-bottom: 20px;">
                   <a class="dropdown-item" href="#it" label="EN"><img src='img/en.png'>English</a>  
                   <a class="dropdown-item" href="#fr" label="FN"><img src='img/fn.png'>France</a>
                 </div>
