--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
         </div>
         <div class="offset-md-1 col-md-2 text-center">
           <img src="img/sau5.png">
-          <p class="font-roboto-regular" style="font-size: 18px; margin: 0 -10%;"><br>
+          <p class="font-roboto-regular" style="font-size: 18px;"><br>
             Developers supervised
             in our offices
           </p>
